--- a/chicn/jeu/index.css
+++ b/chicn/jeu/index.css
@@ -16,14 +16,14 @@
 body {
     min-width: 320px;
     font-family: 'Inconsolata', monospace;
-    background-color: var(--couleur3);
+    background-color: var(--couleur1);
 
 }
 section {
     height: auto;
     width: 100vw;
     top: 0px;
-    background-color: var(--couleur3);
+    background-color: var(--couleur1);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,34 +54,34 @@ section {
 
 .bonbon
 {
-    background-image: url('img/bonbon.gif');
+    background-image: url('img/grains.png');
     z-index: 1;
 }
 
 .pacman
 {
-    background-image: url('img/POULET.gif');
+    background-image: url('img/POULET.png');
     z-index: 5;
 }
 
 .fantome0
 {
-    background-image: url('img/renard.gif');
+    background-image: url('img/renard.png');
     z-index: 5;
 }
 .fantome1
 {
-    background-image: url('img/bombe.gif');
+    background-image: url('img/bombe.png');
     z-index: 5;
 }
 .fantome2
 {
-    background-image: url('img/renard.gif');
+    background-image: url('img/dog.png');
     z-index: 5;
 }
 .fantome3
 {
-    background-image: url('img/bombe.gif');
+    background-image: url('img/renard.png');
     z-index: 5;
 }
 h1{
@@ -89,6 +89,12 @@ color:var(--couleur4);
 text-align: center;
 font-size: 32px;
 text-transform: uppercase;
+
+
+}
+p{
+color:var(--couleur3);
+text-align: center;
 
 
 }
